--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
             </ul>
         </nav>
         <div class="banner">
-
+            <div class="banner-content">
+                <h1 class="banner-title">
+                Brand New Group of Architects
+            </h1>
+            <p class="banner-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis qui amet sunt a, fuga veritatis. Fugit ducimus asperiores nihil fuga Lorem ipsum, dolor sit amet consectetur.
+            </p>
+            <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-image" src="./images/banner.png" alt="">
         </div>
     </header>
     <main>
