--- a/index.html
+++ b/index.html
@@ -33,7 +33,23 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="./images/team1.png" alt="two architect discussing about design">
+                <img src="./images/team2.png" alt="three architect discussing about design">
+                <img src="./images/team3.png" alt="two architect discussing about design">
+                <img src="./images/team4.png" alt="two architect discussing about design">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title">
+                    <span id="quick-list" class="text-light-gray">Quick List</span> <span>of Our</span> <span>Features</span>
+                </h3>
+                <p class="feature-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eveniet dolore hic. Deleniti quos est quidem, reprehenderit aspernatur nemo neque similique molestiae.
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
