add responsiveness in features

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
             <div class="our-features">
                 <h3 class="feature-title">
-                    <span id="quick-list" class="text-light-gray">Quick List</span> <span>of Our</span> <span>Features</span>
+                    <span id="quick-list" class="text-light-gray">Quick List</span> <span>of Our</span> <span class="text-primary">Features</span>
                 </h3>
-                <p class="feature-description">
+                <p class="feature-description text-light-gray">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eveniet dolore hic. Deleniti quos est quidem, reprehenderit aspernatur nemo neque similique molestiae.
                 </p>
                 <button class="btn-primary">Explore More</button>
