--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="./images/team4.png" alt="two architect discussing about design">
             </div>
             <div class="our-features">
-                <h3 class="feature-title">
+                <h3 class="section-title">
                     <span id="quick-list" class="text-light-gray">Quick List</span> <span>of Our</span> <span class="text-primary">Features</span>
                 </h3>
                 <p class="feature-description text-light-gray">
@@ -49,6 +49,46 @@
                 </p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit sed nulla excepturi exercitationem dolores alias doloremque veniam possimus. In, nulla.
+            </p>
+            <div class="facts-container">
+                <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                   <div>
+                     <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                   </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Projects Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="some-facts">
+
         </section>
     </main>
     <footer>
