--- a/index.html
+++ b/index.html
@@ -87,8 +87,20 @@
                 </div>
             </div>
         </section>
-        <section class="some-facts">
-
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto, ullam neque quae saepe eos itaque a voluptate incidunt necessitatibus sit accusamus harum, repudiandae consectetur reiciendis hic ab fugit? Aliquam!
+                </p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
         </section>
     </main>
     <footer>
