add features card and image, working progress

--- a/index.html
+++ b/index.html
@@ -50,6 +50,53 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam temporibus sed fugiat doloremque. Provident eveniet veritatis odit voluptas voluptate ea ratione doloribus, quisquam commodi, molestiae doloremque quo obcaecati distinctio.</p>
+                <div class="feature-card">
+                    <h4 class="feature-title">
+                        Dextop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam quas beatae. Maxime recusandae in labore saepe aliquid. Fuga hic assumenda, eligendi voluptates dolores vitae.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">
+                        Dextop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam quas beatae. Maxime recusandae in labore saepe aliquid. Fuga hic assumenda, eligendi voluptates dolores vitae.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">
+                        Dextop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam quas beatae. Maxime recusandae in labore saepe aliquid. Fuga hic assumenda, eligendi voluptates dolores vitae.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">
+                        Dextop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam quas beatae. Maxime recusandae in labore saepe aliquid. Fuga hic assumenda, eligendi voluptates dolores vitae.
+                    </p>
+                </div>
+            </div>
+            <div>
+                <img src="./images/architect.png" alt="">
+                <button id="experience-batch" class="btn-primary">
+                    <span id="experience-year">10+years</span> <br>
+                    <span>experience</span>
+                </button>
+            </div>
+        </section>
+
         <section>
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray fact-description">
