--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="featured-architect">
                 <img src="./images/architect.png" alt="">
-                <button id="experience-batch" class="btn-primary">
+                <button id="experience-badge" class="btn-primary">
                     <span id="experience-year">10+years</span> <br>
                     <span>experience</span>
                 </button>
@@ -151,7 +151,7 @@
         </section>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
