--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
         </section>
     </main>
     <footer>
+        <p> All rights reserved copyright@2025 startup landing page design</p>
+           
         
     </footer>
 </body>
